--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,14 @@ jobs:
         run: |
           cd backend
           uvicorn app.main:app --host 0.0.0.0 --port 8000 &
-          sleep 10
+          for i in {1..10}; do
+            if curl -s http://localhost:8000/api/posts >/dev/null; then
+              echo "Backend is up!"
+              break
+            fi
+            echo "Waiting for backend... ($i/10)"
+            sleep 5
+          done
 
       - name: Test Backend Availability
         run: |
