--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
       - name: Start Backend Service
         run: |
           cd backend
+          export DATABASE_URL="postgresql://postgres:postgres@postgres:5432/postgres"
           uvicorn app.main:app --host 0.0.0.0 --port 8000 &
           for i in {1..10}; do
             if curl -s http://localhost:8000/api/posts >/dev/null; then
