--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,19 +38,28 @@ jobs:
           cd backend
           pip install --no-cache-dir -r requirements.txt
 
-      - name: Start Backend Service
+        - name: Start Backend Service
         run: |
-          cd backend
-          export DATABASE_URL="postgresql://postgres:postgres@postgres:5432/postgres"
-          uvicorn app.main:app --host 0.0.0.0 --port 8000 &
-          for i in {1..10}; do
-            if curl -s http://localhost:8000/api/posts >/dev/null; then
-              echo "Backend is up!"
-              break
-            fi
-            echo "Waiting for backend... ($i/10)"
-            sleep 5
-          done
+            cd backend
+            export DATABASE_URL="postgresql://postgres:postgres@postgres:5432/postgres"
+            uvicorn app.main:app --host 0.0.0.0 --port 8000 &
+            # Проверка доступности PostgreSQL перед запуском бекенда
+            for i in {1..10}; do
+                if pg_isready -h postgres -U postgres -d postgres; then
+                    echo "PostgreSQL is ready!"
+                    break
+                fi
+                echo "Waiting for PostgreSQL... ($i/10)"
+                sleep 5
+            done
+            for i in {1..10}; do
+                if curl -s http://localhost:8000/api/posts >/dev/null; then
+                    echo "Backend is up!"
+                    break
+                fi
+                echo "Waiting for backend... ($i/10)"
+                sleep 5
+            done
 
       - name: Test Backend Availability
         run: |
