--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
           --health-cmd "pg_isready -U postgres"
           --health-interval 10s
           --health-timeout 5s
-          --health-retries 5
+          --health-retries 10
       redis:
         image: redis:6
         ports:
@@ -41,19 +41,23 @@ jobs:
       - name: Install PostgreSQL Client
         run: sudo apt-get install -y postgresql-client
 
+      - name: Wait for PostgreSQL
+        run: |
+          for i in {1..15}; do
+            if pg_isready -h postgres -U postgres -d postgres; then
+              echo "PostgreSQL is ready!"
+              sleep 5
+              break
+            fi
+            echo "Waiting for PostgreSQL... ($i/15)"
+            sleep 5
+          done
+
       - name: Start Backend Service
         run: |
           cd backend
           export DATABASE_URL="postgresql://postgres:postgres@postgres:5432/postgres"
           uvicorn app.main:app --host 0.0.0.0 --port 8000 &
-          for i in {1..10}; do
-            if pg_isready -h postgres -U postgres -d postgres; then
-              echo "PostgreSQL is ready!"
-              break
-            fi
-            echo "Waiting for PostgreSQL... ($i/10)"
-            sleep 5
-          done
           for i in {1..10}; do
             if curl -s http://localhost:8000/api/posts >/dev/null; then
               echo "Backend is up!"
