--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,10 @@ jobs:
         ports:
           - 5432:5432
         options: >-
-          --health-cmd "pg_isready -U postgres"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 10
+          --health-cmd pg_isready -U postgres
+          --health-interval 5s
+          --health-timeout 2s
+          --health-retries 20
       redis:
         image: redis:6
         ports:
@@ -43,13 +43,9 @@ jobs:
 
       - name: Wait for PostgreSQL
         run: |
-          for i in {1..15}; do
-            if pg_isready -h postgres -U postgres -d postgres; then
-              echo "PostgreSQL is ready!"
-              sleep 5
-              break
-            fi
-            echo "Waiting for PostgreSQL... ($i/15)"
+          for i in {1..20}; do
+            pg_isready -h postgres -U postgres -d postgres && sleep 10 && break
+            echo "Waiting for PostgreSQL... ($i/20)"
             sleep 5
           done
 
@@ -57,13 +53,11 @@ jobs:
         run: |
           cd backend
           export DATABASE_URL="postgresql://postgres:postgres@postgres:5432/postgres"
-          uvicorn app.main:app --host 0.0.0.0 --port 8000 &
-          for i in {1..10}; do
-            if curl -s http://localhost:8000/api/posts >/dev/null; then
-              echo "Backend is up!"
-              break
-            fi
-            echo "Waiting for backend... ($i/10)"
+          uvicorn app.main:app --host 0.0.0.0 --port 8000
+          sleep 10
+          for i in {1..15}; do
+            curl -s http://localhost:8000/api/posts && break
+            echo "Waiting for backend... ($i/15)"
             sleep 5
           done
 
