--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         ports:
           - 5432:5432
         options: >-
-          --health-cmd pg_isready -U postgres
+          --health-cmd "pg_isready -U postgres"
           --health-interval 5s
           --health-timeout 2s
           --health-retries 20
@@ -53,8 +53,7 @@ jobs:
         run: |
           cd backend
           export DATABASE_URL="postgresql://postgres:postgres@postgres:5432/postgres"
-          uvicorn app.main:app --host 0.0.0.0 --port 8000
-          sleep 10
+          uvicorn app.main:app --host 0.0.0.0 --port 8000 &
           for i in {1..15}; do
             curl -s http://localhost:8000/api/posts && break
             echo "Waiting for backend... ($i/15)"
