--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,10 @@ jobs:
         ports:
           - 5432:5432
         options: >-
-          --health-cmd "pg_isready -U postgres"
+          --health-cmd "pg_isready -U postgres -d postgres -h localhost"
           --health-interval 5s
           --health-timeout 2s
-          --health-retries 20
+          --health-retries 30
       redis:
         image: redis:6
         ports:
@@ -43,20 +43,20 @@ jobs:
 
       - name: Wait for PostgreSQL
         run: |
-          for i in {1..20}; do
-            pg_isready -h postgres -U postgres -d postgres && sleep 10 && break
-            echo "Waiting for PostgreSQL... ($i/20)"
+          for i in {1..30}; do
+            pg_isready -h localhost -U postgres -d postgres && sleep 15 && break
+            echo "Waiting for PostgreSQL... ($i/30)"
             sleep 5
           done
 
       - name: Start Backend Service
         run: |
           cd backend
-          export DATABASE_URL="postgresql://postgres:postgres@postgres:5432/postgres"
+          export DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres"
           uvicorn app.main:app --host 0.0.0.0 --port 8000 &
-          for i in {1..15}; do
+          for i in {1..20}; do
             curl -s http://localhost:8000/api/posts && break
-            echo "Waiting for backend... ($i/15)"
+            echo "Waiting for backend... ($i/20)"
             sleep 5
           done
 
