--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,8 @@
 fastapi
 uvicorn[standard]
-sqlalchemy
 databases
-psycopg2-binary
+psycopg2-binary>=2.9.5
+sqlalchemy>=1.4.41
 python-dotenv
 redis
 passlib[bcrypt]
