--- a/kubernetes/frontend-deployment.yaml
+++ b/kubernetes/frontend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: cloud-blog-frontend:0.1.0
+        image: blog-frontend:0.1.0
         imagePullPolicy: IfNotPresent
         envFrom:
         - configMapRef:
