--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,35 +18,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 60
-    services:
-      postgres:
-        image: postgres:13-alpine
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-          POSTGRES_DB: postgres
-        options: >-
-          --health-cmd "pg_isready -U postgres -d postgres -h localhost"
-          --health-interval 5s
-          --health-timeout 2s
-          --health-retries 30
-      redis:
-        image: redis:6.2-alpine
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Docker info
-        run: |
-          docker version
-          docker info
-
-      - name: Log in to GHCR
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
@@ -61,6 +40,8 @@ jobs:
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAMESPACE }}/backend:latest
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAMESPACE }}/backend:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Build and Push Frontend Image
         uses: docker/build-push-action@v4
@@ -70,69 +51,109 @@ jobs:
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAMESPACE }}/frontend:latest
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAMESPACE }}/frontend:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: Set up KinD Cluster
+        uses: helm/kind-action@v1
 
       - name: Install kubectl
         uses: azure/setup-kubectl@v3
         with:
           version: 'latest'
 
-      - name: Install minikube
+      - name: Create image pull secret
         run: |
-          curl -Lo minikube https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
-          sudo install minikube /usr/local/bin/minikube
+          kubectl create secret docker-registry ghcr-secret \
+            --docker-server=${{ env.REGISTRY }} \
+            --docker-username=${{ github.actor }} \
+            --docker-password=${{ secrets.GITHUB_TOKEN }} \
+            --dry-run=client -o yaml | kubectl apply -f -
 
-      - name: Start minikube
-        run: |
-          minikube start --driver=docker --force --memory=4096 --cpus=2
-
-      - name: Build and load backend image into minikube
-        run: |
-          docker build -t blog-backend:ci ./backend
-          minikube image load blog-backend:ci
-
-      - name: Build and load frontend image into minikube
-        run: |
-          docker build -t blog-frontend:ci ./frontend
-          minikube image load blog-frontend:ci
-
-      - name: Create Kubernetes secrets in Minikube
+      - name: Create Kubernetes secrets
         env:
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
           GF_PASSWORD: ${{ secrets.GF_SECURITY_ADMIN_PASSWORD }}
         run: |
           kubectl create secret generic postgres-secrets \
-            --from-literal=POSTGRES_PASSWORD="${POSTGRES_PASSWORD}" \
-            --dry-run=client -o yaml | kubectl apply -f -
-
+            --from-literal=POSTGRES_PASSWORD="${POSTGRES_PASSWORD}" --dry-run=client -o yaml | kubectl apply -f -
+          # The DATABASE_URL must include the port (:5432) to prevent connection errors
           kubectl create secret generic backend-secrets \
-            --from-literal=DATABASE_URL="postgresql://postgres:${POSTGRES_PASSWORD}@postgres:5432/postgres" \
-            --dry-run=client -o yaml | kubectl apply -f -
-
+            --from-literal=DATABASE_URL="postgresql://postgres:${POSTGRES_PASSWORD}@postgres:5432/postgres" --dry-run=client -o yaml | kubectl apply -f -
           kubectl create secret generic grafana-secrets \
-            --from-literal=GF_SECURITY_ADMIN_PASSWORD="${GF_PASSWORD}" \
-            --dry-run=client -o yaml | kubectl apply -f -
+            --from-literal=GF_SECURITY_ADMIN_PASSWORD="${GF_PASSWORD}" --dry-run=client -o yaml | kubectl apply -f -
 
-      - name: Update manifests to use CI images and apply
+      - name: Apply Kubernetes manifests
         run: |
-          sed -i "s|image: blog-backend:0.1.0|image: blog-backend:ci|g" kubernetes/backend-deployment.yaml || true
-          sed -i "s|image: blog-frontend:0.1.0|image: blog-frontend:ci|g" kubernetes/frontend-deployment.yaml || true
           kubectl apply -f kubernetes/
 
-      - name: Wait for rollouts
+      - name: Update deployments with specific image tags
         run: |
-          kubectl rollout status deployment/backend --timeout=120s || true
-          kubectl rollout status deployment/frontend --timeout=120s || true
+          # Update backend deployment with specific image tag and pull secret
+          kubectl set image deployment/backend backend=${{ env.REGISTRY }}/${{ env.IMAGE_NAMESPACE }}/backend:${{ github.sha }}
+          kubectl patch deployment backend -p '{"spec":{"template":{"spec":{"imagePullSecrets":[{"name":"ghcr-secret"}]}}}}'
+          
+          # Update frontend deployment with specific image tag and pull secret
+          kubectl set image deployment/frontend frontend=${{ env.REGISTRY }}/${{ env.IMAGE_NAMESPACE }}/frontend:${{ github.sha }}
+          kubectl patch deployment frontend -p '{"spec":{"template":{"spec":{"imagePullSecrets":[{"name":"ghcr-secret"}]}}}}'
 
-      - name: Show Minikube IP and resource status
+      - name: Wait for database to be ready
         run: |
-          echo "Minikube IP: $(minikube ip)"
-          kubectl get nodes -o wide
-          kubectl get pods --all-namespaces -o wide
-          kubectl get svc --all-namespaces -o wide
+          echo "Waiting for PostgreSQL deployment to complete..."
+          kubectl rollout status deployment/postgres --timeout=120s
+          
+          # Give PostgreSQL time to initialize
+          echo "Waiting for PostgreSQL to initialize..."
+          kubectl wait --for=condition=ready pod -l app=postgres --timeout=60s || true
+          sleep 10
+
+      - name: Verify backend can connect to database
+        run: |
+          echo "Checking backend pod events..."
+          kubectl get events --field-selector involvedObject.kind=Pod | grep backend || true
+          
+          echo "Checking if backend pods are created..."
+          kubectl get pods -l app=backend
+
+      - name: Wait for application rollouts
+        run: |
+          echo "Waiting for backend rollout to complete..."
+          kubectl rollout status deployment/backend --timeout=300s
+          
+          echo "Waiting for frontend rollout to complete..."
+          kubectl rollout status deployment/frontend --timeout=300s
+
+      - name: Verify deployments
+        run: |
+          echo "--- Deployment Status ---"
+          kubectl get deployments
+          echo "--- Pod Status ---"
+          kubectl get pods
+          echo "--- Service Status ---"
+          kubectl get services
+
+      - name: Debug pods on failure
+        if: failure()
+        run: |
+          echo "--- Pod Status ---"
+          kubectl get pods -A -o wide
+          echo "--- Pod Events ---"
+          kubectl get events --sort-by='.lastTimestamp'
+          echo "--- Pod Descriptions ---"
+          kubectl describe pods
+          echo "--- Backend Logs ---"
+          kubectl logs deployment/backend --all-containers=true --tail=200 || true
+          echo "--- Frontend Logs ---"
+          kubectl logs deployment/frontend --all-containers=true --tail=200 || true
+          echo "--- Postgres Logs ---"
+          kubectl logs deployment/postgres --all-containers=true --tail=200 || true
+          echo "--- Deployment Rollout History ---"
+          kubectl rollout history deployment/backend || true
+          kubectl rollout history deployment/frontend || true
