--- a/kubernetes/backend-deployment.yaml
+++ b/kubernetes/backend-deployment.yaml
@@ -14,8 +14,8 @@ spec:
     spec:
       containers:
       - name: backend
-        image: blog-backend:0.1.0
-        imagePullPolicy: IfNotPresent
+        image: ghcr.io/lentra0/backend:latest
+        imagePullPolicy: Always
         envFrom:
         - secretRef:
             name: backend-secrets
@@ -34,14 +34,19 @@ spec:
           httpGet:
             path: /health
             port: 8000
-          initialDelaySeconds: 5
+          initialDelaySeconds: 10
           periodSeconds: 10
+          timeoutSeconds: 5
+          successThreshold: 1
+          failureThreshold: 3
         livenessProbe:
           httpGet:
             path: /health
             port: 8000
           initialDelaySeconds: 30
+          periodSeconds: 10
           timeoutSeconds: 5
+          failureThreshold: 3
         securityContext:
           runAsNonRoot: true
           runAsUser: 1000
