--- a/kubernetes/postgres-deployment.yaml
+++ b/kubernetes/postgres-deployment.yaml
@@ -25,9 +25,9 @@ spec:
         volumeMounts:
         - name: postgres-data
           mountPath: /var/lib/postgresql/data
-      securityContext:
-        runAsUser: 999
-        fsGroup: 999
+#      securityContext:
+#        runAsUser: 999
+#        fsGroup: 999
       volumes:
       - name: postgres-data
         persistentVolumeClaim:
