--- a/kubernetes/postgres-secrets.yaml
+++ b/kubernetes/postgres-secrets.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: postgres-secrets
+  name: backend-secrets
 type: Opaque
-data:
-  POSTGRES_PASSWORD: "cG9zdGdyZXNfcGFzc3dvcmQ="
+stringData:
+  DATABASE_URL: "postgresql://postgres:change_me_postgres_password@postgres:5432/postgres"
+  REDIS_URL: "redis://redis:6379/0"
