--- a/kubernetes/backend-secrets.yaml
+++ b/kubernetes/backend-secrets.yaml
@@ -3,6 +3,6 @@ kind: Secret
 metadata:
   name: backend-secrets
 type: Opaque
-data:
-  DATABASE_URL: "cG9zdGdyZXM6Ly9wb3N0Z3Jlczo="
-  REDIS_URL: "cmVkaXM6Ly8="
+stringData:
+  DATABASE_URL: "postgresql://postgres:change_me_postgres_password@postgres:5432/postgres"
+  REDIS_URL: "redis://redis:6379/0"
