--- a/kubernetes/postgres-secrets.yaml
+++ b/kubernetes/postgres-secrets.yaml
@@ -1,8 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: backend-secrets
+  name: postgres-secrets
 type: Opaque
 stringData:
-  DATABASE_URL: "postgresql://postgres:change_me_postgres_password@postgres:5432/postgres"
-  REDIS_URL: "redis://redis:6379/0"
+  POSTGRES_PASSWORD: "change_me_postgres_password"
